[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = "1.42.0"
actix-web = "4"
reqwest = { version = "0.12.11", features = [
    "blocking",
    "json",
    "rustls-tls",
    "http2",
] }
base64 = "0.22.1"
env_logger = "0.11.6"
dotenvy = { version = "0.15.7" }
log = "0.4.22"
tracing = "0.1.41"
url = "2.5.4"
lambda_runtime = "0.13.0"

[profile.dev]
opt-level = 0
codegen-units = 256

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
